@@ -1,5 +1,6 @@
 Version 2009110901
 + Modernized Makefile.PL
++ POD and Kwalitee tests
 
 Version 2009040901
 + Fix documentation issue (sinan.unur@gmail.com/RT #14870)
